Bug 62173 - journal-gateway webinterface reports wrong "hardware"
Summary: journal-gateway webinterface reports wrong "hardware"
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-11 15:01 UTC by Timo Gurr
Modified: 2013-03-31 16:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Timo Gurr 2013-03-11 15:01:36 UTC
Since upgrading from 196 to 198 the journal-gateway webinterface reports "running on bare metal" instead of the previous correct "running on virtualization vmware" when detecting a virtualized "hardware" environment.

systemd 196 journal reports:
MESSAGE	DMI: VMware, Inc. VMware Virtual Platform/440BX Desktop Reference Platform, BIOS 6.00 07/09/2012
MESSAGE	systemd 196 running in system mode. (+PAM -LIBWRAP -AUDIT -SELINUX -IMA -SYSVINIT -LIBCRYPTSETUP -GCRYPT +ACL +XZ; other)
MESSAGE	Detected virtualization 'vmware'.
systemd 196 journal-gateway webinterface reports:
Running on virtualization vmware.

systemd 198 journal reports:
ESSAGE	DMI: VMware, Inc. VMware Virtual Platform/440BX Desktop Reference Platform, BIOS 6.00 07/09/2012
MESSAGE	systemd 198 running in system mode. (+PAM -LIBWRAP -AUDIT -SELINUX -IMA -SYSVINIT -LIBCRYPTSETUP -GCRYPT +ACL +XZ)
MESSAGE	Detected virtualization 'vmware'.
systemd 198 journal-gateway webinterface reports:
Running on bare metal.
Comment 1 Kay Sievers 2013-03-12 20:17:27 UTC
This is likely caused by running as non-root now.

The gateway needs to ask systemd now for the data, and not try to detect
it on its own.
Comment 2 Lennart Poettering 2013-03-31 16:19:43 UTC
Fixed in git.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.